--- a/main.html
+++ b/main.html
@@ -8,6 +8,67 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="webPage">
+		<!-- image  -->
+		<div> 
+		   <img  class="imageContainer"
+			   src="https://plus.unsplash.com/premium_photo-1661335257817-4552acab9656?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8YXJjaGl0ZWN0fGVufDB8fDB8fHww"
+			    alt="architect image"
+			   width="350px"
+			   />
+		</div>
+
+		<div> 
+			<table border="1">
+				<tr>
+					<td class="col_1">
+						<img width="200px" src="https://images.unsplash.com/photo-1748020633629-dca427d2d1db?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzfHx8ZW58MHx8fHx8"
+							alt="first col img" />
+					</td>
+					<td class="col_2">
+						<P>Unit #5 -Floor Plans</P>
+						<P>A. Kitchen</P>
+						<P>B. Bathroom</P>
+						<P>C. Using "Slabs"</P>
+						<P>D. Georgian Home</P>
+						<P>E. Sketching Assignment #5</P>
+
+					</td>
+					<td class="col_1">
+						<img width="200px"  src="https://images.unsplash.com/photo-1748020633629-dca427d2d1db?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzfHx8ZW58MHx8fHx8"
+							alt="first col img" />
+					</td>
+				</tr>
+
+					<tr>
+					<td >
+						<div>
+							<img width="200px" src="https://images.unsplash.com/photo-1583430312373-0fb9d4e0c4ef?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGhvdXNlJTIwcGFsbnxlbnwwfHwwfHx8MA%3D%3D" alt="" />
+						</div>
+						<div>
+							<p class="para">Home architecture is the design and structure of houses. It focuses on making homes comfortable, functional, and nice to look at. Good architecture uses space wisely and reflects the style of the people living there. 
+							  <a href="https://unsplash.com/s/photos/house-paln">Lern more</a>
+							</p>
+						</div>
+					</td>
+					<td class="col_1">
+						<p class="arch-objective">The objective of architecture is to design spaces that are both functional and aesthetically pleasing, while addressing the needs of the people who use them. Architecture blends art, science, and technology to shape environments that support daily life, work, and recreation. A key goal is to create structures that are safe, sustainable, and efficient, while also reflecting cultural values and individual identity. Architects aim to balance form and function—ensuring that buildings not only look beautiful but also serve their intended purpose effectively. </p>
+					</td>
+					<td>
+						<div>
+							<img width="200px" src="https://images.unsplash.com/photo-1583430312373-0fb9d4e0c4ef?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGhvdXNlJTIwcGFsbnxlbnwwfHwwfHx8MA%3D%3D" alt="" />
+						</div>
+						<div>
+							<p class="para">Home architecture is the design and structure of houses. It focuses on making homes comfortable, functional, and nice to look at. Good architecture uses space wisely and reflects the style of the people living there. 
+							  <a href="https://unsplash.com/s/photos/house-paln">Lern more</a>
+							</p>
+						</div>
+					</td>
+				</tr>
+			</table>
+		</div>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
